@@ -4,27 +4,21 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.howtodoinjava.employees.model.Employee;
 import com.howtodoinjava.employees.services.EmployeeService;
 
-@SpringBootTest
-@AutoConfigureMockMvc
-public class StandaloneControllerTests2 {
+@WebMvcTest(EmployeeController.class)
+public class EmployeeController_MockMvcTests {
 
 	@MockBean
 	EmployeeService employeeService;
@@ -33,9 +27,9 @@ public class StandaloneControllerTests2 {
 	MockMvc mockMvc;
 
 	@Test
-	public void testfindAll() throws Exception {
+	public void testFindAll() throws Exception {
 		Employee employee = new Employee("Lokesh", "Gupta");
-		List<Employee> employees = Arrays.asList(employee);
+		List<Employee> employees = List.of(employee);
 
 		Mockito.when(employeeService.findAll()).thenReturn(employees);
 
